--- a/src/2.base/typography.scss
+++ b/src/2.base/typography.scss
@@ -70,8 +70,8 @@ body {
 a:not(.no-link) {
 	color: $link;
 	text-decoration: none;
-	margin: -1px 0;
-	padding: 1px 2px;
+	margin: -1px -1px;
+	padding: 1px 1px;
 	border-radius: 2px;
 
 	&:hover {
