Update link styling

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,6 +2,7 @@
 @import "2.base/typography.scss";
 @import "2.base/utils.scss";
 @import "2.base/form.scss";
+@import "2.base/link.scss";
 
 @import "3.layout/columns";
 @import "3.layout/container";
