--- a/src/1.utilities/variables.scss
+++ b/src/1.utilities/variables.scss
@@ -14,9 +14,9 @@ $breakpoints:   (
 $greyscale: (
 	"black":          hsl(231, 9%, 4%),
 	"dark":           hsl(231, 9%, 30%),
-	"greydark":       hsl(231, 9%, 52%),
+	"grey-dark":      hsl(231, 9%, 52%),
 	"grey":           hsl(231, 9%, 74%),
-	"greylight":      hsl(231, 9%, 92%),
+	"grey-light":     hsl(231, 9%, 92%),
 	"light":          hsl(231, 9%, 98%),
 	"white":          hsl(231, 9%, 100%),
 )!default;
