--- a/src/5.components/card.scss
+++ b/src/5.components/card.scss
@@ -1,3 +1,4 @@
+$card-header-background-color: map-get($greyscale, "light");
 $card-background-color: $background !default;
 $card-padding: 0.75rem !default;
 $card-border: $border !default;
@@ -31,6 +32,7 @@ $card-margin-bottom: 1rem !default;
 .card-header {
 	font-weight: bold;
 	padding: $card-padding;
+	background-color: $card-header-background-color;
 }
 
 .card-body {
