Change family option to be default

--- a/src/2.base/typography.scss
+++ b/src/2.base/typography.scss
@@ -1,4 +1,4 @@
-$family: $family-sans-serif;
+$family: $family-sans-serif !default;
 
 $title-size: $size-5 !default;
 $title-weight: bold !default;
