--- a/src/4.elements/swatch.scss
+++ b/src/4.elements/swatch.scss
@@ -1,4 +1,7 @@
 @use "sass:map";
+@use "sass:color";
+@use "../1.utilities/variables" as *;
+@use "../1.utilities/helpers" as *;
 
 .swatch {
 	position: relative;
@@ -16,7 +19,7 @@
   @each $name, $color in $greyscale {
 		&.is-#{$name} {
 			background-color: $color;
-			border-color: scale-color($color, $lightness: -20%, $saturation: -50%);
+			border-color: color.scale($color, $lightness: -20%, $saturation: -50%);
 			color: choose-contrast-color($color);
 		}
 	}
@@ -24,19 +27,19 @@
   @each $name, $color in $colors {
 		&.is-#{$name}-light {
 			background-color: get-light($color);
-			border-color: scale-color(get-light($color), $lightness: -20%, $saturation: -50%);
+			border-color: color.scale(get-light($color), $lightness: -20%, $saturation: -50%);
 			color: choose-contrast-color(get-light($color));
 		}
 
 		&.is-#{$name} {
 			background-color: $color;
-			border-color: scale-color($color, $lightness: -20%, $saturation: -50%);
+			border-color: color.scale($color, $lightness: -20%, $saturation: -50%);
 			color: choose-contrast-color($color);
 		}
 
 		&.is-#{$name}-dark {
 			background-color: get-dark($color);
-			border-color: scale-color(get-dark($color), $lightness: -20%, $saturation: -50%);
+			border-color: color.scale(get-dark($color), $lightness: -20%, $saturation: -50%);
 			color: choose-contrast-color(get-dark($color));
 		}
 	}
