--- a/src/3.layout/columns.scss
+++ b/src/3.layout/columns.scss
@@ -1,4 +1,6 @@
 @use "sass:math";
+@use "../1.utilities/variables" as *;
+@use "../1.utilities/responsive" as *;
 
 $column-num: 12 !default;
 $column-gap: 1rem;
