--- a/src/3.layout/container.scss
+++ b/src/3.layout/container.scss
@@ -1,3 +1,6 @@
+@use "../1.utilities/variables" as *;
+@use "../1.utilities/responsive" as *;
+
 $container-override: unset !default;
 
 .container {
