--- a/src/5.components/card.scss
+++ b/src/5.components/card.scss
@@ -1,3 +1,6 @@
+@use "../1.utilities/variables" as *;
+@use "../1.utilities/helpers" as *;
+
 $card-header-background-color: map-get($greyscale, "light");
 $card-background-color: $background !default;
 $card-padding: 0.75rem !default;
@@ -12,7 +15,6 @@ $card-margin-top: 1rem !default;
 $card-margin-bottom: 1rem !default;
 
 .card {
-	--bo: #{toChannels($card-border)};
 	background-color: $card-background-color;
 	border-color: $card-border;
 	border-width: $card-border-width;
