--- a/src/1.utilities/responsive.scss
+++ b/src/1.utilities/responsive.scss
@@ -1,6 +1,9 @@
+@use "sass:map";
+@use "sass:meta";
+
 @mixin gt($bp) {
-	@if type-of($bp) == string {
-		$bp: map-get($breakpoints, $bp);
+	@if meta.type-of($bp) == string {
+		$bp: map.get($breakpoints, $bp);
 	}
 	@media only screen and (min-width: $bp) {
 		@content;
@@ -8,8 +11,8 @@
 }
 
 @mixin lt($bp) {
-	@if type-of($bp) == string {
-		$bp: map-get($breakpoints, $bp);
+	@if meta.type-of($bp) == string {
+		$bp: map.get($breakpoints, $bp);
 	}
 	@media only screen and (max-width: $bp) {
 		@content;
