--- a/src/5.components/card.scss
+++ b/src/5.components/card.scss
@@ -2,7 +2,7 @@
 @use "../1.utilities/variables" as *;
 @use "../1.utilities/helpers" as *;
 
-$card-header-background-color: map.get($greyscale, "light");
+$card-header-background-color: map.get($greyscale, "light") !default;
 $card-background-color: $background !default;
 $card-padding: 0.75rem !default;
 $card-border: $border !default;
