Maybe this works now?

--- a/src/2.base/form.scss
+++ b/src/2.base/form.scss
@@ -1,6 +1,5 @@
 @use "sass:map";
-@use "../1.utilities/variables" as *;
-@use "../1.utilities/helpers" as *;
+@use "../init" as *;
 
 $field-margin-top: 0.75rem !default;
 $field-margin-bottom: 0.75rem !default;
