--- a/src/2.base/typography.scss
+++ b/src/2.base/typography.scss
@@ -1,6 +1,5 @@
 @use "sass:map";
-@use "../1.utilities/variables" as *;
-@use "../1.utilities/helpers" as *;
+@use "../init" as *;
 
 $family: $family-sans-serif !default;
 $family-display: $family-sans-serif !default;
