--- a/src/4.elements/box.scss
+++ b/src/4.elements/box.scss
@@ -1,4 +1,4 @@
-@use "../1.utilities/variables" as *;
+@use "../init" as *;
 
 $box-padding: 0.75rem !default;
 $box-background: $background !default;
