--- a/src/4.elements/swatch.scss
+++ b/src/4.elements/swatch.scss
@@ -1,7 +1,6 @@
 @use "sass:map";
 @use "sass:color";
-@use "../1.utilities/variables" as *;
-@use "../1.utilities/helpers" as *;
+@use "../init" as *;
 
 .swatch {
 	position: relative;
